Name:           Lazy-Pbkdf2
Version:        1.0.0
Author:         Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:     Marcus Ofenhed <marcus@conditionraise.se>
License-File:   LICENSE
Synopsis:       Lazy PBKDF2 generator.
Description:    A PBKDF2 generator that generates a lazy ByteString
                of PRNG data.
Category:       Cryptography
Build-Type:     Simple
cabal-version:  >= 1.2

Library
  Exposed-Modules: Pbkdf2
  Ghc-Options:     -O2
  Build-Depends:   base,
                   SHA,
                   bytestring,
                   binary
                   

Test-Suite Known-answer
  Type:          exitcode-stdio-1.0
  Main-Is:       Pbkdf2-test.hs
  Ghc-Options:   -O2
  build-depends: base,
                 bytestring,
                 base16-bytestring,
                 binary
